--- a/css/main.css
+++ b/css/main.css
@@ -978,6 +978,7 @@ summary {
   padding-top: 30px;
   padding-bottom: 24px;
   text-align: center;
+  background-color: #fff;
 }
 .team__member {
   margin-bottom: 10px;
