--- a/css/main.css
+++ b/css/main.css
@@ -479,13 +479,11 @@ summary {
 @media screen and (max-width: 767.5px) {
   .mob-menu {
     display: none;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    max-width: 480px;
-    height: 100%;
-    min-height: 796px;
+    width: 100vw;
+    height: 100vh;
     overflow-y: scroll;
     padding: 48px 40px;
     z-index: 1;
