--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -171,13 +171,15 @@
 	@media screen and (max-width: 767.5px) {
 		display: none;
 
-		position: absolute;
+		position: fixed;
 		top: 0;
 		left: 0;
-		width: 100%;
-		max-width: 480px;
-		height: 100%;
-		min-height: 796px;
+		// width: 100%;
+		// max-width: 480px;
+		// height: 100%;
+		// min-height: 796px;
+		width: 100vw;
+		height: 100vh;
 
 		overflow-y: scroll;
 
