--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,12 @@
   }
 }
 
+@media screen and (max-width: 767.5px) {
+  body.no-scroll {
+    overflow: hidden;
+  }
+}
+
 .section {
   padding: 60px 0;
 }
@@ -329,7 +335,7 @@ summary {
 }
 
 .page-header {
-  border-bottom: 1px solid #ECECEC;
+  border-bottom: 1px solid #ececec;
 }
 
 .page-header__container {
@@ -478,7 +484,16 @@ summary {
 }
 @media screen and (max-width: 767.5px) {
   .mob-menu {
-    display: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+    opacity: 0;
     position: fixed;
     top: 0;
     left: 0;
@@ -487,13 +502,23 @@ summary {
     overflow-y: scroll;
     padding: 48px 40px;
     z-index: 1;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
+    -webkit-transition-property: opacity, -webkit-transform;
+    transition-property: opacity, -webkit-transform;
+    transition-property: transform, opacity;
+    transition-property: transform, opacity, -webkit-transform;
+    -webkit-transition-duration: 250ms;
+            transition-duration: 250ms;
+    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
   .mob-menu.is-open {
-    display: block;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
   }
   .mob-menu .mob-nav__list {
-    margin-bottom: 302px;
+    margin-bottom: auto;
   }
   .mob-menu .mob-nav__item:not(:last-child) {
     margin-bottom: 32px;
