--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,454 +1,394 @@
 // /* Шапка */
 
 .page-header {
-	border-bottom: 1px solid #ECECEC;
-
+  border-bottom: 1px solid #ececec;
 }
 
 .page-header__container {
-	position: relative;
+  position: relative;
 
-
-	@media screen and (min-width: 768px) {
-		display: flex;
-		align-items: center;
-	}
-
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+  }
 }
 
-
 .nav {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+  }
 
-	@media screen and (min-width: 768px) {
-		display: flex;
-		align-items: center;
+  &__logo {
+    padding: 16px 0;
+    color: $title-text-color;
+    font-size: 24px;
 
-	}
+    @media screen and (min-width: 768px) {
+      margin-right: 88px;
+      padding: 26px 0;
+    }
 
-	&__logo {
-		padding: 16px 0;
-		color: $title-text-color;
-		font-size: 24px;
+    @media screen and (min-width: 1200px) {
+      margin-right: 93px;
+      padding: 24px 0;
+      font-size: 26px;
+    }
+  }
 
-		@media screen and (min-width: 768px) {
-			margin-right: 88px;
-			padding: 26px 0;
-		}
+  &__list {
+    display: none;
 
-		@media screen and (min-width: 1200px) {
-			margin-right: 93px;
-			padding: 24px 0;
-			font-size: 26px;;
+    @media screen and (min-width: 768px) {
+      display: flex;
+      align-items: center;
+    }
+  }
 
-		}
-	}
+  &__item {
+    @media screen and (min-width: 768px) {
+      &:not(:last-child) {
+        margin-right: 50px;
+      }
+    }
+  }
 
+  &__link {
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: $title-text-color;
 
+    &--active {
+      color: $accent;
+    }
 
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
+    &:hover,
+    &:focus {
+      color: $accent;
+    }
 
-
-	&__list {
-		display: none;
-
-
-		@media screen and (min-width: 768px) {
-			display: flex;
-			align-items: center;
-		}
-
-	}
-
-	&__item {
-
-
-
-		@media screen and (min-width: 768px) {
-
-			&:not(:last-child) {
-				margin-right: 50px;
-			}
-		}
-	}
-
-
-	&__link {
-
-		font-size: 40px;
-		font-weight: 500;
-		line-height: 1.18;
-		letter-spacing: 0.02em;
-		text-align: center;
-		color: $title-text-color;
-
-		&--active {
-			color: $accent;
-		}
-
-		transition-property: color;
-		transition-duration: 250ms;
-		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-
-		&:hover,
-		&:focus {
-			color: $accent;
-		}
-
-
-		@media screen and (min-width: 768px) {
-		display: block;
-		padding-top: 18px;
-		padding-bottom: 18px;
-		color: $site-nav-links-color;
-		font-weight: 500;
-		font-size: 14px;
-		line-height: 16px;
-		letter-spacing: 0.02em;
-
-
-		}
-	}
-
-
+    @media screen and (min-width: 768px) {
+      display: block;
+      padding-top: 18px;
+      padding-bottom: 18px;
+      color: $site-nav-links-color;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 16px;
+      letter-spacing: 0.02em;
+    }
+  }
 }
 
 .nav__button {
-	display: none;
+  display: none;
 
-	@media screen and (max-width: 767.5px) {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		margin: 0;
-		border: none;
-		background-color: transparent;
-		position: absolute;
-		top: 10px;
-		right: 15px;
-		width: 40px;
-		height: 40px;
+  @media screen and (max-width: 767.5px) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    border: none;
+    background-color: transparent;
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    width: 40px;
+    height: 40px;
 
-		z-index: 2;
+    z-index: 2;
 
+    cursor: pointer;
 
-		cursor: pointer;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-		transition-property: fill;
-		transition-duration: 250ms;
-		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-
-			&:hover, &:focus {
-				fill: $accent;
-		}
-
-
-	}
-
+    &:hover,
+    &:focus {
+      fill: $accent;
+    }
+  }
 }
 
-
-
 .close-icon {
-	display: none;
-
+  display: none;
 }
 
 .nav__button.is-open .close-icon {
-	display: block;
+  display: block;
 }
 
 .nav__button.is-open .menu-icon {
-	display: none;
+  display: none;
 }
-
-
 
 .mob-menu {
-	display: none;
+  display: none;
 
-	@media screen and (max-width: 767.5px) {
-		display: none;
+  @media screen and (max-width: 767.5px) {
+    display: flex;
 
-		position: fixed;
-		top: 0;
-		left: 0;
-		// width: 100%;
-		// max-width: 480px;
-		// height: 100%;
-		// min-height: 796px;
-		width: 100vw;
-		height: 100vh;
+    flex-direction: column;
 
-		overflow-y: scroll;
+    transform: translateX(-100%);
+    opacity: 0;
 
-		padding: 48px 40px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    // width: 100%;
+    // max-width: 480px;
+    // height: 100%;
+    // min-height: 796px;
+    width: 100vw;
+    height: 100vh;
 
-		z-index: 1;
+    overflow-y: scroll;
 
-		background-color: #FFFFFF;
+    padding: 48px 40px;
 
+    z-index: 1;
 
-		&.is-open {
-			display: block;
-		}
+    background-color: #ffffff;
 
-		.mob-nav__list {
-			margin-bottom: 302px;
+    transition-property: transform, opacity;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-		}
+    &.is-open {
+      transform: translateX(0);
+      opacity: 1;
+    }
 
-		.mob-nav__item {
-			&:not(:last-child) {
-				margin-bottom: 32px;
-			}
+    .mob-nav__list {
+      margin-bottom: auto;
+    }
 
-		}
+    .mob-nav__item {
+      &:not(:last-child) {
+        margin-bottom: 32px;
+      }
+    }
 
-		.mob-nav__link {
-			font-size: 40px;
-			font-weight: 500;
-			line-height: 47px;
-			letter-spacing: 0.02em;
-			text-align: left;
-			color: $title-text-color;
+    .mob-nav__link {
+      font-size: 40px;
+      font-weight: 500;
+      line-height: 47px;
+      letter-spacing: 0.02em;
+      text-align: left;
+      color: $title-text-color;
 
-			transition-property: color;
-			transition-duration: 250ms;
-			transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+      transition-property: color;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-			&:hover,
-			&:focus {
-				color: $accent;
-			}
+      &:hover,
+      &:focus {
+        color: $accent;
+      }
+    }
 
-		}
+    .mob-nav__link--active {
+      color: $accent;
+    }
 
-		.mob-nav__link--active {
-			color: $accent;
+    .mob-contacts {
+      margin-bottom: 64px;
+    }
 
-		}
+    .mob-contacts__item {
+      &:not(:last-child) {
+        margin-bottom: 32px;
+      }
+    }
 
+    .mob-contacts__link {
+      &--tel {
+        @media screen and (max-width: 376px) {
+          font-size: 26px;
+        }
+        font-size: 34px;
+        font-weight: 500;
+        line-height: 1.76;
+        letter-spacing: 0.02em;
+        text-align: left;
 
-		.mob-contacts {
-			margin-bottom: 64px;
-		}
+        color: $accent;
+      }
 
-		.mob-contacts__item {
-			&:not(:last-child) {
-				margin-bottom: 32px;
-			}
+      &--mail {
+        font-size: 24px;
+        font-weight: 500;
+        line-height: 1.17;
+        letter-spacing: 0.02em;
+        text-align: left;
+        color: $primary-text-color;
+      }
 
-		}
+      transition-property: color;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-		.mob-contacts__link {
+      &:hover,
+      &:focus {
+        color: $accent;
+      }
+    }
 
-			&--tel {
+    .mob-socials {
+      display: flex;
+      flex-wrap: wrap;
+    }
 
-				@media screen and (max-width: 376px) {
-					font-size: 26px;
+    .mob-socials__item {
+      height: 22px;
+      &:not(:last-child) {
+        border-right: 1px solid rgba(33, 33, 33, 0.2);
+        padding-right: 10px;
+      }
 
-				}
-				font-size: 34px;
-				font-weight: 500;
-				line-height: 1.76;
-				letter-spacing: 0.02em;
-				text-align: left;
+      &:nth-child(n + 2) {
+        margin-left: 10px;
+      }
+    }
 
-				color: $accent;
-			}
-
-			&--mail {
-				font-size: 24px;
-				font-weight: 500;
-				line-height: 1.17;
-				letter-spacing: 0.02em;
-				text-align: left;
-				color: $primary-text-color;
-			}
-
-			transition-property: color;
-			transition-duration: 250ms;
-			transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-			&:hover,
-			&:focus {
-				color: $accent;
-			}
-
-		}
-
-		.mob-socials {
-			display: flex;
-			flex-wrap: wrap;
-
-		}
-
-		.mob-socials__item {
-
-			height: 22px;
-			&:not(:last-child) {
-				border-right: 1px solid rgba(33, 33, 33, 0.2);
-				padding-right: 10px;
-			}
-
-			&:nth-child(n + 2) {
-				margin-left: 10px;
-			}
-
-		}
-
-		.mob-socials__link {
-			font-size: 18px;
-			font-weight: 500;
-			line-height: 1.2;
-			letter-spacing: 0.02em;
-			text-align: left;
-			color: $accent;
-
-		}
-
-
-	}
-
-
+    .mob-socials__link {
+      font-size: 18px;
+      font-weight: 500;
+      line-height: 1.2;
+      letter-spacing: 0.02em;
+      text-align: left;
+      color: $accent;
+    }
+  }
 }
-
 
 .nav__link--active {
-	@media screen and (min-width: 768px) {
-		display: block;
-		padding-top: 18px;
-		padding-bottom: 18px;
-		color: $site-nav-links-color;
-		font-weight: 500;
-		font-size: 14px;
-		line-height: 14px;
-		letter-spacing: 0.02em;
-		color: $accent;
-		position: relative;
+  @media screen and (min-width: 768px) {
+    display: block;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    color: $site-nav-links-color;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 14px;
+    letter-spacing: 0.02em;
+    color: $accent;
+    position: relative;
 
-		&::after {
-			content: '';
-			display: block;
-			position: absolute;
-			bottom: -16px;
-			width: 100%;
-			height: 4px;
-			border-radius: 2px;
-			background-color: $accent;
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      bottom: -16px;
+      width: 100%;
+      height: 4px;
+      border-radius: 2px;
+      background-color: $accent;
 
-			@media screen and (min-width: 1200px) {
-				bottom: -16px;
-			}
-		}
-	}
-
+      @media screen and (min-width: 1200px) {
+        bottom: -16px;
+      }
+    }
+  }
 }
 
-
-
 .page-header__contacts {
+  display: none;
 
-	display: none;
+  @media screen and (min-width: 768px) {
+    display: block;
+    margin-left: auto;
+  }
 
-	@media screen and (min-width: 768px) {
-		display: block;
-		margin-left: auto;
-	}
-
-	@media screen and (min-width: 1200px) {
-		display: flex;
-		align-items: center;
-	}
-
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .contacts__item {
-	@media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
+  }
 
-		display: flex;
-		align-items: center;
-		&:not(:last-child) {
-			margin-bottom: 10px;
-		}
-	}
+  @media screen and (min-width: 1200px) {
+    &:not(:last-child) {
+      margin-bottom: 0;
+    }
 
-	@media screen and (min-width: 1200px) {
+    margin-bottom: 0;
 
-		&:not(:last-child) {
-			margin-bottom: 0;
-		}
-
-		margin-bottom: 0;
-
-		&:not(:last-child) {
-			margin-right: 30px;
-		}
-	}
-
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
 }
 
 .contacts__link {
-	@media screen and (min-width: 768px) {
-		display: flex;
-		align-items: center;
-		color: $primary-text-color;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+    color: $primary-text-color;
 
-		font-size: 12px;
-		font-weight: 500;
-		line-height: 14px;
-		letter-spacing: 0.02em;
-		text-align: left;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 14px;
+    letter-spacing: 0.02em;
+    text-align: left;
 
-		transition-property: color;
-		transition-duration: 250ms;
-		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-		&:hover, &:focus {
-			color: $accent;
-		}
+    &:hover,
+    &:focus {
+      color: $accent;
+    }
+  }
 
-	}
-
-	@media screen and (min-width: 1200px) {
-		font-size: 14px;
-	}
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+  }
 }
 
-
 .contacts__icon {
-	@media screen and (min-width: 768px) {
-		fill: $primary-text-color;
-		margin-right: 8px;
+  @media screen and (min-width: 768px) {
+    fill: $primary-text-color;
+    margin-right: 8px;
 
-		transition-property: fill;
-		transition-duration: 250ms;
-		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-		.contacts__link:hover & {
-			fill: $accent;
-		}
-
-	}
+    .contacts__link:hover & {
+      fill: $accent;
+    }
+  }
 }
 
 .mail-icon {
-	@media screen and (min-width: 768px) {
-		width: 14px;
-		height: 10px;
-
-	}
+  @media screen and (min-width: 768px) {
+    width: 14px;
+    height: 10px;
+  }
 }
-
-
 
 .tel-icon {
-	@media screen and (min-width: 768px) {
-		width: 10px;
-		height: 14px;
-
-	}
+  @media screen and (min-width: 768px) {
+    width: 10px;
+    height: 14px;
+  }
 }
-
