--- a/sass/utils/_common.scss
+++ b/sass/utils/_common.scss
@@ -24,6 +24,11 @@
 	padding-right: 15px;
 }
 
+body.no-scroll {
+	@media screen and (max-width: 767.5px) {
+		overflow: hidden;
+	}
+}
 
 .section {
 
